@@ -1,10 +1,15 @@
 package jda.layer.bot.JDA.Handlers.buttons.tickets;
 
+import java.awt.Color;
+import java.time.Instant;
 import java.util.EnumSet;
+import java.util.List;
 import jda.layer.bot.JDA.Config.TicketsPermissions;
 import jda.layer.bot.JDA.Handlers.buttons.ButtonInteractionHandler;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.Permission;
+import net.dv8tion.jda.api.entities.MessageEmbed;
+import net.dv8tion.jda.api.entities.MessageEmbed.Field;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.interactions.components.ActionRow;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
@@ -24,31 +29,13 @@ public class TicketClaimHandler implements ButtonInteractionHandler {
   }
 
   private void claimTicket(@NotNull ButtonInteractionEvent event) {
-//    String helperCategoryName = event.getMember().getEffectiveName() + "`s TICKETS";
-    int topPosition = event.getGuild().getCategories().getFirst().getPosition();
     EnumSet<Permission> denyEveryone = EnumSet.of(Permission.VIEW_CHANNEL);
 
-    boolean hasPermission =
-        event.getMember().getPermissions().stream()
-            .anyMatch(permission -> permission.equals(Permission.MESSAGE_MANAGE));
+    boolean hasRole =
+        event.getMember().getRoles().stream()
+            .anyMatch(role -> role.getName().equals("Ticket Support"));
 
-//    boolean isHelperCategoryExist =
-//        event.getGuild().getCategories().stream()
-//            .anyMatch(category -> category.getName().equals(helperCategoryName));
-
-    if (hasPermission) {
-//      if (!isHelperCategoryExist) {
-//        event
-//            .getGuild()
-//            .createCategory(helperCategoryName)
-//            .setPosition(topPosition)
-//            .addPermissionOverride(event.getGuild().getPublicRole(), null, denyEveryone)
-//            .addMemberPermissionOverride(
-//                Long.parseLong(event.getMember().getId()),
-//                TicketsPermissions.allowHelper,
-//                TicketsPermissions.denyHelper)
-//            .complete();
-//      }
+    if (hasRole) {
       event
           .getChannel()
           .asTextChannel()
@@ -61,30 +48,54 @@ public class TicketClaimHandler implements ButtonInteractionHandler {
           .putPermissionOverride(event.getGuild().getPublicRole(), null, denyEveryone)
           .putMemberPermissionOverride(
               Long.parseLong(event.getMember().getId()),
-              TicketsPermissions.allowHelper,
-              TicketsPermissions.denyHelper)
+              TicketsPermissions.allowHelperPerms,
+              TicketsPermissions.denyHelperPerms)
           .queue();
 
       event
           .getInteraction()
           .getMessage()
           .editMessageComponents(
-              ActionRow.of(Button.danger("ticket_close", "\uD83D\uDD10 Close Ticket")))
+              ActionRow.of(
+                  Button.danger("ticket_close", "\uD83D\uDD10 Close Ticket"),
+                  Button.secondary("unclaim_ticket", "Unclaim Ticket")))
           .queue();
 
       event
           .getInteraction()
           .getMessage()
           .editMessageEmbeds(
-              new EmbedBuilder(event.getMessage().getEmbeds().getFirst())
-                  .addField(
-                      "**Ваш хелпер**", String.format("<@%s>", event.getMember().getId()), false)
-                  .build())
+              getEditedEmbed(event.getMessage().getEmbeds().get(0), event.getMember().getId()))
           .queue();
 
-      event.getHook().sendMessage("You have successfully got user`s ticket!").queue();
+      event.getHook().sendMessage("Now you are considering this ticket!").queue();
     } else {
-      event.getHook().sendMessage("Sorry, but this option is only for helpers").queue();
+      event
+          .getHook()
+          .sendMessage("Sorry, but this option is only for helpers (Support Ticket Role)")
+          .queue();
     }
+  }
+
+  private MessageEmbed getEditedEmbed(MessageEmbed messageToEdit, String helperId) {
+    EmbedBuilder builder = new EmbedBuilder();
+    List<Field> embedFields = messageToEdit.getFields();
+    String title = messageToEdit.getTitle();
+    String description = messageToEdit.getDescription();
+
+    for (int i = 0; i < 3; ++i) {
+      builder.addField(embedFields.get(i));
+    }
+
+    builder.setTitle(title);
+    builder.setDescription(description);
+    builder.addField("**Status**", "Processing \uD83D\uDFE2", true);
+    builder.addField("**Is being considered by**", "<@" + helperId + ">", true);
+    builder.addField(embedFields.getLast());
+    builder.setTimestamp(Instant.now());
+    builder.setFooter("Started to consider");
+    builder.setColor(new Color(4, 203, 116));
+
+    return builder.build();
   }
 }
